* Replace browser sniffing with capability detection in IE fork of String#unescapeHTML. [kangax]

* Fix for IE7 to access local files via Ajax.Request. Closes #8259. [hagen.seifert, jddalton]

* Ensure CSS files have loaded before firing the dom:loaded event. [Diego Perini, jddalton]

* Allow Form#request to pass the "submit" option to Form#serialize. [#66 state:resolved] [Ben Sommerville, jddalton, jodosha]

* Ensure Element#readAttribute works properly when accessing the "type" attribute of an IFRAME. [#118 state:resolved] [Zekid, kangax]

* Ensure Object.isElement and Object.isHash handle "falsy" values properly. [jddalton, kangax]

* Fix exiting test task on INT signal. [Samuel Lebeau]

* Ensure deprecated Position object methods use Element#getDimensions. [jddalton]

* Correct Element#cumulativeScrollOffset for IE, Safari, and Opera < 9.5.  [jddalton]

* Make Form#serializeElements more closely follow the W3C specifications. [#85 state:resolved] [jddalton]

* Make Element#viewportOffset return correct values for "fixed" positioned elements. Closes #10869. [kangax, watersco]

* Fix Element#viewportOffset from incorrectly adding the element's scroll position. Closes #7314. [jddalton, nrlz]

* Correct how Element#clonePosition sets element dimensions. Closes #11613. [#9 state:resolved] [azazel, jddalton, Nick Stakenburg]

* Fix a bug in Element#getOffsetParent that throws an error when document.documentElement is passed. [jddalton]

* Make Element#relativize preserve the dimensions/coordinates of absolutely positioned elements. Closes #9168. [dmmd, jddalton, kangax]

* Ensure Element#absolutize accounts for element margins when it positions it. Closes #8024. [jddalton, chiefcll]

* Fix Element#absolutize calculating dimensions incorrectly in IE7. Closes #9918. [kangax, pphilipp]

* Force Element.extend() to skip XML nodes to avoid errors in IE. (Use the static Element methods instead.) Closes #9709. [jddalton, yanick.rochon]
