@@ -208,6 +208,7 @@
 <div id="dimensions-display-none-pos-rel"></div>
 <div id="dimensions-visible-pos-abs"></div>
 <div id="dimensions-display-none-pos-abs"></div>
+<span id="dimensions-span">a span</span>
 <table border="0" cellspacing="0" cellpadding="0" id="dimensions-table">
   <tbody id="dimensions-tbody">
     <tr id="dimensions-tr">
